--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,7 @@
 	"rules": {
 		"indent": "off",
 		"quotes": ["error", "double"],
-		"semi": ["error", "never"],
+		"prettier/prettier": ["error", { "semi": true }],
 		"linebreak-style": ["error", "unix"],
 		"react/self-closing-comp": ["error"],
 		"react/jsx-uses-react": "off",
