--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,8 @@
 {
 	"doubleQuoto": true,
-	"semi": false,
+	"semi": true,
 	"useTabs": true,
-	"tabWidth": 4,
+	"tabWidth": 2,
 	"trailingComma": "all",
 	"printWidth": 150,
 	"endOfLine": "auto",
